Fixed low contrast

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -117,7 +117,7 @@
         margin: 5px;
         
     }
-    .image-container p {
+    .image-container h3 {
         right: 10px;
         bottom: 1px;
         background-color: #184d71c5;
